--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,7 +44,9 @@
 }
 
 @layer base {
-  
+  /* body {
+    @apply bg-background text-foreground overflow-x-hidden;
+  } */
 
   *::-webkit-scrollbar-thumb {
     @apply bg-secondary w-0.5 rounded-full;
